# messenger

./: .dockerignore  .env  .env.example  .env.prod.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  setup_local.sh
alembic/: env.py
alembic/versions/: 01_media_files.py  02_reactions_and_replies.py  03_group_media_reactions.py  04_message_read_at.py  05_unique_constraints.py  06_indexes.py  07_add_chat_models.py  07_drop_nonce_tag.py  08_drop_old_tables.py  09_fix_media_files_fk.py  10_increase_emoji_column.py  11_drop_nonce_tag.py  12_add_avatars.py  20260324_add_media_files.py  20260327_add_reactions_and_replies.py  2f049a81d7a4_fix_media_files_foreign_key_to_chat_.py  372c8dfa1eee_increase_emoji_column_size.py  5a78c4bc5b71_add_chat_models.py  69a62152b62f_drop_old_tables.py
app/: main.py
app/core/: config.py  connection_manager.py  database.py  deps.py  jwt.py  redis_client.py
deploy/: deploy.sh  nginx_vps.conf
frontend/: .env.production  Dockerfile  index.html  package-lock.json  package.json  vite.config.js
src/: __init__.py  config.py  main.py
tests/: conftest.py  test_auth.py  test_auth_extended.py  test_business_logic.py  test_chats.py  test_cleanup.py  test_contacts.py  test_crypto.py  test_emoji.py  test_integrity.py  test_media.py  test_messages.py  test_resource_health.py  test_security.py  test_smoke_step2.py  test_smoke_step3.py  test_smoke_step4.py  test_smoke_step5.py  test_smoke_step6.py  test_ws.py
(+173 files in other folders)
